2007-11-09  Adam Fedor  <fedor@gnu.org>

	* Version 0.13.0
	
2007-11-05 Fred Kiefer <FredKiefer@gmx.de>

	* COPYING: Add GPL 3 licence file.
	
2007-11-05 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoGState.m (-DPSsetflat:, -DPSsetlinewidth:,
	-DPSsetmiterlimit, -DPScurrentflat:, -DPScurrentlinewidth:,
	-DPScurrentmiterlimit:, -DPSsetdash:::): Convert floats from user
	space to drawing space and visa versa.
	* Source/cairo/CairoGState.m (-DPSsetdash:::): Adjust dash values slightly.
	* Source/cairo/CairoFontEnumerator.m: Change NSLog to NSDebugLog.

2007-10-31 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m (-_setupRootWindow): Use
	objectForKey: instead of stringForKey:.
	Patch by Wolfgang Lux <wolfgang.lux@gmail.com>.

2007-10-30  Adam Fedor  <fedor@gnu.org>

        * gnustep-back.spec.in: Change Copyright to License.

2007-10-30 Fred Kiefer <FredKiefer@gmx.de>

	* Change files to use GPL 3 and LGPL 3.
	* Prepare for next release.
	
2007-10-18 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoContext.m,
	* Source/cairo/CairoGState.m: Format cleanup.
	* Source/cairo/XGCairoXImageSurface.m (-initWithDevice:): Use
	XGCairoSurface when a NSBackingStoreNonretained type window is used.
	
2007-10-12 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m (-placewindow:): Change window to be
	temporary resizable. Patch by Wolfgang Lux <wolfgang.lux@gmail.com>. 
	* Source/x11/XIMInputServer.m: Clean up includes to avoid compiler warning.
	* Source/x11/raster.c (calculateCombineArea): Change parameter
	signedness to avoid compiler warnings.
	* Source/x11/convert.c (convertTrueColor_generic,
	convertPseudoColor_to_8): Change parameter signedness to avoid compiler warnings.
	
2007-10-08 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoFontInfo.m
	(-appendBezierPathWithGlyphs:count:toBezierPath:):  First implemenation.
	
2007-10-07 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/gsc/GSFunction.h: Declare the -getsample:: method in