@@ -1,3 +1,8 @@
+2007-11-22 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/gsc/GSContext.m (-GSDrawImage:):Implement via
+	NSDrawBitmap::::::. 
+
 2007-11-09  Adam Fedor  <fedor@gnu.org>
 
 	* Version 0.13.0
